--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.4.5",
     "@react-navigation/core": "react-navigation/core",
-    "@react-navigation/native": "react-navigation/native",
+    "@react-navigation/native": "^5.4.0",
     "@use-expo/font": "^2.0.0",
     "expo": "^37.0.11",
     "expo-font": "~8.1.0",
