--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.4.5",
     "@react-navigation/core": "react-navigation/core",
     "@react-navigation/native": "^5.4.0",
+    "@react-navigation/stack": "^5.3.7",
     "@use-expo/font": "^2.0.0",
     "expo": "^37.0.11",
     "expo-font": "~8.1.0",
